apps/security/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Kubernetes-Sicherheitsüberwachung
    gethomepage.dev/group: Weitere
    gethomepage.dev/icon: mdi-radar
    gethomepage.dev/name: kguardian
  name: kguardian
spec:
  hostnames:
    - kguardian.lucadev.de
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy
      namespace: networking
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kguardian-frontend
          namespace: security
          port: 5173
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
