apps/security/kguardian/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kguardian-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kguardian
  oidc:
    provider:
      issuer: https://idm.lucadev.de/oauth2/openid/kguardian
    clientID: kguardian
    clientSecret:
      name: kguardian-kanidm-oauth2-credentials
    redirectURL: https://kguardian.lucadev.de/oidc/callback
    logoutPath: /logout
    refreshToken: true
